--- a/Contact.css
+++ b/Contact.css
@@ -194,8 +194,79 @@ color:#8B6E80;
   border: 2px white solid;
   }
 
+
+  @media only screen and (max-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) {
+    .BackgroundBaseColor {
+      width: 428px;
+      height: 926px;
+      position: relative;
+      background: linear-gradient(180deg, #839A8D 31%, #8B6E80 100%);
+    }
+  
+    .CTA {
+      width: 50%;
+      font-size: 20px;
+      margin-top: 700px;
+      position: absolute;
+
+    }
+    .Image1 {
+     left: 260px;
+     width: 124px;
+     height: 67px;
+     top: 32px;
+     position: absolute;
+  
+    }
+    .Image7 {
+      width: 123px;
+      height: 63px;
+      left: 2px;
+      top: 5px;
+      position: absolute;
+     
+    }
+    .contact-info {
+      width: 100%;
+      font-size: 18px;
+      top: 450px ; 
+      position: absolute;
+
+      left: 10px;
+    }
+    .ContactDes{
+      left: 20px; 
+      top: 200px; 
+      position: absolute; 
+      color: white; 
+      font-size: 30px; 
+      font-family: Modern Sans; 
+      font-weight: 500; 
+      word-wrap: break-word;
+    }
+    .ContactText{
+      width: 250px;
+      left: 20px; 
+      top: 250px; 
+      position: absolute; 
+      color: white; 
+      font-size: 15px; 
+      font-family: Modern Sans; 
+      font-weight: 500; 
+      word-wrap: break-word;
+    }
+    
+    .Vector7 {
+      width: 59%;
+      height: 0px;
+      left: 20px;
+      top: 320px;
+      position: absolute;
+      border: 2px white solid;
+    }
+  }
 /* iPhone 12-15 Pro Max queries */
-@media only screen and (max-width: 430px) and (device-height: 932px) {
+@media only screen and (max-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) {
   /* styles for iPhone 12-15 Pro Max devices go here */
   .BackgroundBaseColor {
     width: 430px;
@@ -207,6 +278,8 @@ color:#8B6E80;
   .CTA {
     width: 50%;
     font-size: 20px;
+    position: absolute;
+
     margin-top: 700px;
   }
   .Image1 {
@@ -228,6 +301,8 @@ color:#8B6E80;
   .contact-info {
     width: 100%;
     font-size: 18px;
+    position: absolute;
+
     top: 450px ; 
     left: 10px;
   }
@@ -266,9 +341,18 @@ color:#8B6E80;
 /* iPhone 12-13-14-15 Pro queries */
 @media only screen and (max-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
   /* styles for iPhone 12-13-14-15 Pro devices go here */
+  .BackgroundBaseColor {
+    width: 430px;
+    height: 932px;
+    position: relative;
+    background: linear-gradient(180deg, #839A8D 31%, #8B6E80 100%);
+  }
+
   .CTA {
     width: 50%;
     font-size: 20px;
+    position: absolute;
+
     margin-top: 615px;
    margin-left: 100px;
    
@@ -294,6 +378,8 @@ color:#8B6E80;
     font-size: 18px;
     top: 400px ; 
     left: 10px;
+    position: absolute;
+
   }
   .ContactDes{
     left: 20px; 
