--- a/Contact.css
+++ b/Contact.css
@@ -136,8 +136,6 @@ color:#8B6E80;
      position: absolute;
   }
 
-  
-
 
 .ContactDes{
   left: 99px; 
@@ -162,7 +160,6 @@ color:#8B6E80;
   font-weight: 500; 
   word-wrap: break-word;
 }
-
 
 .contact-info{
     width: 820px;
@@ -227,22 +224,26 @@ color:#8B6E80;
      
     }
     .contact-info {
-      width: 100%;
-      font-size: 18px;
-      top: 450px ; 
+      width: 427px;
+      left: 26px;
+      top: 195px;
       position: absolute;
-
-      left: 10px;
-    }
-    .ContactDes{
-      left: 20px; 
-      top: 200px; 
-      position: absolute; 
-      color: white; 
-      font-size: 30px; 
-      font-family: Modern Sans; 
-      font-weight: 500; 
+      color: white;
+      font-size: 24px;
+      font-family: Modern Sans;
+      font-weight: 500;
       word-wrap: break-word;
+    }
+    
+    .ContactDes{
+      left: 172px;
+    top: 282px;
+    position: absolute;
+    color: white;
+    font-size: 24px;
+    font-family: Modern Sans;
+    font-weight: 500;
+    word-wrap: break-word;
     }
     .ContactText{
       width: 250px;
