--- a/Contact.css
+++ b/Contact.css
@@ -280,6 +280,8 @@ color:#8B6E80;
     font-size: 20px;
     position: absolute;
     margin-top: 700px;
+    margin-left: 100px;
+
   }
 
   .Image1 {
