--- a/Contact.css
+++ b/Contact.css
@@ -280,7 +280,7 @@ color:#8B6E80;
     font-size: 20px;
     position: absolute;
     margin-top: 700px;
-    margin-left: 100px;
+    margin-left: 500px;
 
   }
 
@@ -343,74 +343,74 @@ color:#8B6E80;
 
 /* iPhone 12-13-14-15 Pro queries */
 @media only screen and (max-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
-  /* styles for iPhone 12-13-14-15 Pro devices go here */
   .BackgroundBaseColor {
-    width: 430px;
-    height: 932px;
-    position: relative;
-    background: linear-gradient(180deg, #839A8D 31%, #8B6E80 100%);
-  }
-
+     width: 390px;
+     height: 844px;
+     position: relative;
+     background: linear-gradient(180deg, #839A8D 31%, #8B6E80 100%);
+   }
+ 
   .CTA {
-    width: 50%;
-    font-size: 20px;
-    position: absolute;
-
-    margin-top: 615px;
-   margin-left: 100px;
-   
-  }
+     width: 50%;
+     font-size: 20px;
+     position: absolute;
+     margin-top: 550px; /* Adjusted margin-top value */
+     margin-left: 120px; /* Adjusted margin-left value */
+   }
+ 
   .Image1 {
-   left: 240px;
-   width: 124px;
-   height: 67px;
-   top: 32px;
-   position: absolute;
-
-  }
+     left: 200px;
+     width: 124px;
+     height: 67px;
+     top: 32px;
+     position: absolute;
+   }
+ 
   .Image7 {
-    width: 123px;
-    height: 63px;
-    left: 2px;
-    top: 5px;
-    position: absolute;
-   
-  }
+     width: 123px;
+     height: 63px;
+     left: 2px;
+     top: 5px;
+     position: absolute;
+   }
+ 
   .contact-info {
-    width: 100%;
-    font-size: 18px;
-    top: 400px ; 
-    left: 10px;
-         position: absolute;
-  }
-  .ContactDes{
-    left: 20px; 
-    top: 200px; 
-    position: absolute; 
-    color: white; 
-    font-size: 30px; 
-    font-family: Modern Sans; 
-    font-weight: 500; 
-    word-wrap: break-word;
-  }
-  .ContactText{
-    width: 250px;
-    left: 20px; 
-    top: 250px; 
-    position: absolute; 
-    color: white; 
-    font-size: 15px; 
-    font-family: Modern Sans; 
-    font-weight: 500; 
-    word-wrap: break-word;
-  }
-  
+     width: 100%;
+     font-size: 18px;
+     top: 380px;
+     left: 10px;
+     position: absolute;
+   }
+ 
+  .ContactDes {
+     left: 20px;
+     top: 160px;
+     position: absolute;
+     color: white;
+     font-size: 30px;
+     font-family: Modern Sans;
+     font-weight: 500;
+     word-wrap: break-word;
+   }
+ 
+  .ContactText {
+     width: 250px;
+     left: 20px;
+     top: 210px;
+     position: absolute;
+     color: white;
+     font-size: 15px;
+     font-family: Modern Sans;
+     font-weight: 500;
+     word-wrap: break-word;
+   }
+ 
   .Vector7 {
-    width: 59%;
-    height: 0px;
-    left: 20px;
-    top: 320px;
-    position: absolute;
-    border: 2px white solid;
+     width: 59%;
+     height: 0px;
+     left: 20px;
+     top: 280px;
+     position: absolute;
+     border: 2px white solid;
   }
 }
