--- a/Contact.css
+++ b/Contact.css
@@ -280,7 +280,7 @@ color:#8B6E80;
     font-size: 20px;
     position: absolute;
     margin-top: 700px;
-    transform: translateX(100%); /* Move 100% to the right */
+    margin-left: 500px;
 
   }
 
@@ -342,6 +342,7 @@ color:#8B6E80;
 }
 
 /* iPhone 12-13-14-15 Pro queries */
+/* iPhone 12-13-14-15 Pro queries */
 @media only screen and (max-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
   .BackgroundBaseColor {
      width: 390px;
@@ -355,7 +356,7 @@ color:#8B6E80;
      font-size: 20px;
      position: absolute;
      margin-top: 550px; /* Adjusted margin-top value */
-     transform: translateX(100%); /* Move 100% to the right */
+     margin-left: 120px; /* Adjusted margin-left value */
    }
  
   .Image1 {
@@ -411,6 +412,6 @@ color:#8B6E80;
      left: 20px;
      top: 280px;
      position: absolute;
-     border: 2px white solid;
+     border: 2px white solid'
   }
 }
