--- a/Contact.css
+++ b/Contact.css
@@ -267,83 +267,80 @@ color:#8B6E80;
   }
 
 /* iPhone 12-15 Pro Max queries */
+/* iPhone 12-15 Pro Max queries */
 @media only screen and (max-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) {
   .BackgroundBaseColor {
-    width: 414px;
-    height: 896px;
-    position: relative;
-    background: linear-gradient(180deg, #839A8D 31%, #8B6E80 100%);
-  }
-
+     width: 414px;
+     height: 896px;
+     position: relative;
+     background: linear-gradient(180deg, #839A8D 31%, #8B6E80 100%);
+   }
+ 
   .CTA {
-    width: 50%;
-    font-size: 20px;
-    position: absolute;
-    margin-top: 700px;
-    margin-left: 500px;
-
-  }
-
+     width: 50%;
+     font-size: 20px;
+     position: absolute;
+     margin-top: 600px; /* Adjusted margin-top value */
+     margin-left: 150px; /* Adjusted margin-left value */
+   }
+ 
   .Image1 {
-    left: 260px;
-    width: 124px;
-    height: 67px;
-    top: 32px;
-    position: absolute;
-  }
-
+     left: 220px;
+     width: 124px;
+     height: 67px;
+     top: 32px;
+     position: absolute;
+   }
+ 
   .Image7 {
-    width: 123px;
-    height: 63px;
-    left: 2px;
-    top: 5px;
-    position: absolute;
-  }
-
+     width: 123px;
+     height: 63px;
+     left: 2px;
+     top: 5px;
+     position: absolute;
+   }
+ 
   .contact-info {
-    width: 100%;
-    font-size: 18px;
-    top: 450px;
-    left: 10px;
-    position: absolute;
-  }
-
+     width: 100%;
+     font-size: 18px;
+     top: 420px;
+     left: 10px;
+     position: absolute;
+   }
+ 
   .ContactDes {
-    left: 20px;
-    top: 200px;
-    position: absolute;
-    color: white;
-    font-size: 30px;
-    font-family: Modern Sans;
-    font-weight: 500;
-    word-wrap: break-word;
-  }
-
+     left: 20px;
+     top: 180px;
+     position: absolute;
+     color: white;
+     font-size: 30px;
+     font-family: Modern Sans;
+     font-weight: 500;
+     word-wrap: break-word;
+   }
+ 
   .ContactText {
-    width: 250px;
-    left: 20px;
-    top: 250px;
-    position: absolute;
-    color: white;
-    font-size: 15px;
-    font-family: Modern Sans;
-    font-weight: 500;
-    word-wrap: break-word;
-  }
-
+     width: 250px;
+     left: 20px;
+     top: 230px;
+     position: absolute;
+     color: white;
+     font-size: 15px;
+     font-family: Modern Sans;
+     font-weight: 500;
+     word-wrap: break-word;
+   }
+ 
   .Vector7 {
-    width: 59%;
-    height: 0px;
-    left: 20px;
-    top: 320px;
-    position: absolute;
-    border: 2px white solid;
-  }
-}
-
-/* iPhone 12-13-14-15 Pro queries */
-/* iPhone 12-13-14-15 Pro queries */
-@media only screen and (max-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+     width: 59%;
+     height: 0px;
+     left: 20px;
+     top: 300px;
+     position: absolute;
+     border: 2px white solid;
+   }
+ }
+ @media only screen and (max-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
   .BackgroundBaseColor {
      width: 390px;
      height: 844px;
@@ -412,6 +409,6 @@ color:#8B6E80;
      left: 20px;
      top: 280px;
      position: absolute;
-     border: 2px white solid'
+     border: 2px white solid;
   }
 }
