--- a/index.css
+++ b/index.css
@@ -918,3 +918,12 @@ body {
     border: 1px white solid;
   }
 }
+.PageView{
+  position: absolute;
+    color: white;
+    font-size: 20px;
+    font-family: Modern Sans;
+    font-weight: 500;
+    letter-spacing: 2.97px;
+    word-wrap: break-word;
+}
