--- a/Contact.css
+++ b/Contact.css
@@ -473,14 +473,12 @@ color:#8B6E80;
   }
 
   .Vector7 {
-    width: 0px;
-    height: 200px;
-    left: 372px;
-    top: 305px;
+    width: 59%;
+    height: 0px;
+    left: 20px;
+    top: 320px;
     position: absolute;
-    transform: rotate(90deg);
-    transform-origin: 0 0;
-    border: 1px white solid;
+    border: 2px white solid;
   }
 
   .CTA {
